# lpc43xx-cmake

./: CMakeLists.txt  README.md
debug/: stlink-v2_lpc43xx.cfg
platform/: toolchain-gcc-arm-embedded.cmake
platform/lpc43xx/: lpc43xx.cmake  lpc43xx.ld  lpc43xx_targets.cmake
platform/lpc43xx/ldscripts/: lpc43xx.ld  lpc43xx_cpp.ld  lpc43xx_mem.ld
platform/lpc43xx/ldscripts/base/cpp/: base_crp.ld
platform/lpc43xx/ldscripts/default/: README.txt
platform/lpc43xx/ldscripts/default/lib/newlib/: nohost_lib.ld  none_lib.ld
platform/lpc43xx/ldscripts/default/lib/newlib-nano/: nohost_lib.ld  none_lib.ld
platform/lpc43xx/ldscripts/default/lib/redlib/: semihosted_lib.ld
platform/lpc43xx/ldscripts/default/sections/: sections.ld
platform/lpc43xx/ldscripts/lib/newlib-nano/: lib_cpp.ld  semihosted_lib.ld
platform/lpc43xx/ldscripts/lib/redlib/: nohost_lib.ld
platform/lpc43xx/ldscripts/newlib/: lpc43xx_newlib_lib_cpp.ld  lpc43xx_newlib_nohost.ld  lpc43xx_newlib_nohost_cpp.ld  lpc43xx_newlib_none.ld  lpc43xx_newlib_none_cpp.ld  lpc43xx_newlib_semihosted.ld  lpc43xx_newlib_semihosted_cpp.ld  lpc43xx_newlib_semihosted_lib.ld
platform/lpc43xx/ldscripts/newlib-nano/: lpc43xx_newlib-nano_nohost.ld  lpc43xx_newlib-nano_nohost_cpp.ld  lpc43xx_newlib-nano_none.ld  lpc43xx_newlib-nano_none_cpp.ld  lpc43xx_newlib-nano_semihosted.ld  lpc43xx_newlib-nano_semihosted_cpp.ld
platform/lpc43xx/ldscripts/redlib/: lpc43xx_redlib_nohost.ld  lpc43xx_redlib_none.ld  lpc43xx_redlib_none_lib.ld  lpc43xx_redlib_semihosted.ld
scripts/: generate_targetconfig.py  patch_cproject.py
sources/application/: CMakeLists.txt  main.c
sources/application/system/: cr_startup_lpc43xx.cpp
sources/bsp/lpc_board_ea_oem_4357/: CMakeLists.txt
sources/bsp/lpc_board_ea_oem_4357/2.12/: CMakeLists.txt
sources/bsp/lpc_board_ea_oem_4357/2.12/inc/: board.h  calibrate.h  clcdc.h  ea_lcd_board.h  tsc2046_touch.h
sources/bsp/lpc_board_ea_oem_4357/2.12/src/: board_sysinit.c  ea_lcd_board.c  lcdb_eeprom.c  retarget.h  tda19988.c  tfp410.c  tsc2046_touch.c
sources/bsp/lpc_board_ea_oem_4357/inc/: board_api.h  nand.h
sources/bsp/lpc_board_ea_oem_4357/src/: board.c  nand.c  norflash.c  pca9532.c
sources/lpcopen/2.12/lpc_chip_43xx/: CMakeLists.txt
sources/lpcopen/2.12/lpc_chip_43xx/inc/: lcd_18xx_43xx.h
sources/lpcopen/2.12/lpc_chip_43xx/src/: clock_18xx_43xx.c  i2cm_18xx_43xx.c  i2s_18xx_43xx.c  lcd_18xx_43xx.c  uart_18xx_43xx.c
sources/lpcopen/lpc_chip_43xx/: CMakeLists.txt
sources/lpcopen/lpc_chip_43xx/src/: sysinit_18xx_43xx.c
