set(LIBRARY_NAME lpc_chip_43xx)

set(LIBRARY_VERSION_MAJOR 2)
set(LIBRARY_VERSION_MINOR 1)
set(LIBRARY_VERSION_PATCH 2)
set(LIBRARY_VERSION ${LIBRARY_VERSION_MAJOR}.${LIBRARY_VERSION_MINOR}.${LIBRARY_VERSION_PATCH})

file(GLOB_RECURSE SOURCE_FILES src/*.c)
file(GLOB_RECURSE HEADER_FILES inc/*.h)

set(LPCOPEN_CHIP_INCLUDE_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/inc CACHE INTERNAL "lpcopen chip library include paths")

include_directories(${LPCOPEN_CHIP_INCLUDE_PATHS})

set_source_files_properties(${SOURCE_FILES} PROPERTIES LANGUAGE C)

add_library(${LIBRARY_NAME} STATIC
  ${SOURCE_FILES}
  ${HEADER_FILES}
)

set_target_properties(${LIBRARY_NAME} PROPERTIES
  OUTPUT_NAME "${LIBRARY_NAME}_${LIBRARY_VERSION}"
  LINKER_LANGUAGE C
)

include(${PLATFORM_FILE})